--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-bootstrap.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-bootstrap.less
@@ -1,4 +1,4 @@
-// sknano bootstrap settings
+// scikit-nano bootstrap settings
 @import "bootstrap/bootstrap.less";
 @import "bootstrap/responsive.less";
 
