--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-content.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-content.less
@@ -1,7 +1,7 @@
-@import "sknano-utils.less";
+@import "scikit-nano-utils.less";
 @import "bootstrap/variables.less";
 
-.sknano-page-title {
+.scikit-nano-page-title {
     h1, h2, h3, h4 {
         font-weight: normal;
         .underline;
@@ -17,18 +17,18 @@
 }
 
 // search item specific settings
-.sknano-search-result {
+.scikit-nano-search-result {
     &-title {
         h1, h2, h3, h4 { font-weight: normal; }
     }
 }
 
 // snippet specific settings
-.sknano-snippet-header {
+.scikit-nano-snippet-header {
     margin-bottom: 5px;
 }
 
-.sknano-snippet-info {
+.scikit-nano-snippet-info {
   padding-top: 10px;
 
     .dl-horizontal {
@@ -37,7 +37,7 @@
     }
 }
 
-.sknano-snippet-body {
+.scikit-nano-snippet-body {
     padding: 10px;
 
     .accordion-group {
