--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-extend.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-extend.less
@@ -1,4 +1,4 @@
-//sknano extend settings
+//scikit-nano extend settings
 
 body {
     background-color: rgb(249,250,245);
@@ -16,7 +16,7 @@ body {
   box-shadow: 0 0 3px #888;
 }
 
-@import "sknano-header.less";
-@import "sknano-content.less";
-@import "sknano-rightsidebar.less";
-@import "sknano-footer.less";
+@import "scikit-nano-header.less";
+@import "scikit-nano-content.less";
+@import "scikit-nano-rightsidebar.less";
+@import "scikit-nano-footer.less";
