--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-header.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-header.less
@@ -1,17 +1,17 @@
 // settings for
 // 1) .header
 // header block is found on the top of the website
-// sknano-navbar, sknano-header-searchbar found inside .header
-// 2) .sknano-navbar
-// 3) .sknano-header-searchbar
+// scikit-nano-navbar, scikit-nano-header-searchbar found inside .header
+// 2) .scikit-nano-navbar
+// 3) .scikit-nano-header-searchbar
 
-@import "sknano-utils.less";
+@import "scikit-nano-utils.less";
 
 .header {
     .margin(@top: 15px, @bottom: 15px);
 }
 
-.sknano-navbar {
+.scikit-nano-navbar {
     .margin (@top: 15px, @bottom: 5px);
     .nav-pills {
         margin-bottom: 0px;
