--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-rightsidebar.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-rightsidebar.less
@@ -1,6 +1,6 @@
 @import "bootstrap/variables.less";
 
-.sknano-rightsidebar {
+.scikit-nano-rightsidebar {
     color: @gray;
     .navigation {
         padding: @paddingSmall;
