--- a/doc/source/themes/scikit-nano/static/less/scikit-nano-utils.less
+++ b/doc/source/themes/scikit-nano/static/less/scikit-nano-utils.less
@@ -1,4 +1,4 @@
-// LESS Utilities for sknano
+// LESS Utilities for scikit-nano
 @import "bootstrap/variables.less";
 
 .padding (@top: 0px, @bottom: 0px, @left: 0px, @right: 0px) {
