--- a/doc/source/themes/scikit-nano/static/css/scikit-nano-extend.css
+++ b/doc/source/themes/scikit-nano/static/css/scikit-nano-extend.css
@@ -20,27 +20,27 @@ body {
   margin-left: 0px;
   margin-right: 0px;
 }
-.sknano-navbar {
+.scikit-nano-navbar {
   margin-top: 15px;
   margin-bottom: 5px;
   margin-left: 0px;
   margin-right: 0px;
 }
-.sknano-navbar .nav-pills {
+.scikit-nano-navbar .nav-pills {
   margin-bottom: 0px;
   font-size: 12px;
 }
-.sknano-navbar .nav-pills > li > a {
+.scikit-nano-navbar .nav-pills > li > a {
   padding-top: 2.5px;
   padding-bottom: 2.5px;
 }
 .underline {
   border-bottom: 1.5px solid #eeeeee;
 }
-.sknano-page-title h1,
-.sknano-page-title h2,
-.sknano-page-title h3,
-.sknano-page-title h4 {
+.scikit-nano-page-title h1,
+.scikit-nano-page-title h2,
+.scikit-nano-page-title h3,
+.scikit-nano-page-title h4 {
   font-weight: normal;
   border-bottom: 1.5px solid #eeeeee;
 }
@@ -49,51 +49,51 @@ body {
   font-size: 9.5px;
   font-weight: bold;
 }
-.sknano-search-result-title h1,
-.sknano-search-result-title h2,
-.sknano-search-result-title h3,
-.sknano-search-result-title h4 {
+.scikit-nano-search-result-title h1,
+.scikit-nano-search-result-title h2,
+.scikit-nano-search-result-title h3,
+.scikit-nano-search-result-title h4 {
   font-weight: normal;
 }
-.sknano-snippet-header {
+.scikit-nano-snippet-header {
   margin-bottom: 5px;
 }
-.sknano-snippet-info {
+.scikit-nano-snippet-info {
   padding-top: 10px;
 }
-.sknano-snippet-info .dl-horizontal {
+.scikit-nano-snippet-info .dl-horizontal {
   margin: 5px;
 }
-.sknano-snippet-info .dl-horizontal dt {
+.scikit-nano-snippet-info .dl-horizontal dt {
   font-weight: normal;
 }
-.sknano-snippet-body {
+.scikit-nano-snippet-body {
   padding: 10px;
 }
-.sknano-snippet-body .accordion-group {
+.scikit-nano-snippet-body .accordion-group {
   border: none;
 }
-.sknano-snippet-body .accordion-heading {
+.scikit-nano-snippet-body .accordion-heading {
   text-transform: uppercase;
   font-size: 14px;
   border-bottom: 1px solid #e5e5e5;
 }
-.sknano-snippet-body .accordion-heading .accordion-toggle {
+.scikit-nano-snippet-body .accordion-heading .accordion-toggle {
   padding-top: 10px;
   padding-bottom: 5px;
 }
-.sknano-rightsidebar {
+.scikit-nano-rightsidebar {
   color: #555555;
 }
-.sknano-rightsidebar .navigation {
+.scikit-nano-rightsidebar .navigation {
   padding: 2px 10px;
   font-size: 11.9px;
 }
-.sknano-rightsidebar .navigation .nav-title {
+.scikit-nano-rightsidebar .navigation .nav-title {
   font-weight: bold;
   text-transform: uppercase;
 }
-.sknano-rightsidebar .navigation li {
+.scikit-nano-rightsidebar .navigation li {
   margin: 5px;
 }
 .footer {
