--- a/doc/source/themes/scikit-nano/static/bootstrap-scikit-nano.css
+++ b/doc/source/themes/scikit-nano/static/bootstrap-scikit-nano.css
@@ -17,27 +17,27 @@ body {
   font-size: 13px;
   font-weight: normal;
   line-height: 18px;
-  color: #404040;
+  color: #2F2F2F;
 }
 
 /* Hyperlinks ----------------------------------------------------------------*/
 
 a {
-  color: #0069d6;
+  color: #0564B1;
   text-decoration: none;
   line-height: inherit;
   font-weight: inherit;
 }
 
 a:hover {
-  color: #00438a;
+  color: #FB6200;
   text-decoration: underline;
 }
 
 /* Typography ----------------------------------------------------------------*/
 
 h1,h2,h3,h4,h5,h6 {
-  color: #404040;
+  color: #2F2F2F;
   margin: 0.7em 0 0 0;
   line-height: 1.5em;
 }
@@ -49,7 +49,7 @@ h2 {
   font-size: 21px;
   line-height: 1.2em;
   margin: 1em 0 0.5em 0;
-  border-bottom: 1px solid #404040;
+  border-bottom: 1px solid #2F2F2F;
 }
 h3 {
   font-size: 18px;
@@ -88,7 +88,7 @@ ol {
 }
 li {
   line-height: 18px;
-  color: #404040;
+  color: #2F2F2F;
 }
 ul.unstyled {
   list-style: none;
@@ -203,9 +203,9 @@ th {
 }
 
 div.viewcode-block:target {
-    background-color: #f4debf;
-    border-top: 1px solid #ac9;
-    border-bottom: 1px solid #ac9;
+    background-color: #F9FCFF;
+    border-top: 1px solid #8F3599;
+    border-bottom: 1px solid #8F3599;
 }
 
 table.docutils {
@@ -224,16 +224,16 @@ div.topbar {
   z-index: 10000;
   padding: 0px 10px;
   background-color: #222;
-  background-color: #222222;
+  background-color: #222020;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#333333), to(#222222));
-  background-image: -moz-linear-gradient(top, #333333, #222222);
-  background-image: -ms-linear-gradient(top, #333333, #222222);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));
-  background-image: -webkit-linear-gradient(top, #333333, #222222);
-  background-image: -o-linear-gradient(top, #333333, #222222);
-  background-image: linear-gradient(top, #333333, #222222);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#2B2B2B), to(#222020));
+  background-image: -moz-linear-gradient(top, #2B2B2B, #222020);
+  background-image: -ms-linear-gradient(top, #2B2B2B, #222020);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2B2B2B), color-stop(100%, #222020));
+  background-image: -webkit-linear-gradient(top, #2B2B2B, #222020);
+  background-image: -o-linear-gradient(top, #2B2B2B, #222020);
+  background-image: linear-gradient(top, #2B2B2B, #222020);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2B2B2B', endColorstr='#222020', GradientType=0);
   overflow: auto;
 }
 
@@ -257,11 +257,11 @@ div.topbar a.brand {
 }
 
 #logotext2 {
-    font-weight:400;
+    font-weight:600;
     color: #0FFF00;
 }
 #logotext3 {
-    font-weight:200;
+    font-weight:400;
 }
 
 div.topbar .brand:hover, div.topbar ul li a.homelink:hover {
@@ -361,7 +361,7 @@ div.topbar input:hover {
 div.topbar input:focus, div.topbar input.focused {
   outline: 0;
   background-color: #ffffff;
-  color: #404040;
+  color: #2F2F2F;
   text-shadow: 0 1px 0 #ffffff;
   border: 0;
   padding: 5px 10px;
@@ -459,10 +459,10 @@ div.sphinxsidebar ul ul {
 /* If showing the global TOC (toctree),
    color the current page differently */
 div.sphinxsidebar a.current {
-    color: #404040;
+    color: #2F2F2F;
 }
 div.sphinxsidebar a.current:hover {
-    color: #404040;
+    color: #2F2F2F;
 }
 
 
@@ -499,7 +499,7 @@ a.headerlink {
 }
 
 a.headerlink:hover {
-    background-color: #0069d6;
+    background-color: #0564B1;
     color: white;
     text-docoration: none;
 }
@@ -540,20 +540,20 @@ div.warning ul, div.warning ol {
 
 /* Admonitions only */
 div.admonition {
-    border: 1px solid #609060;
-    background-color: #e9ffe9;
+    border: 1px solid #E2C6FC;
+    background-color: #DBFFFE;
 }
 div.admonition p.admonition-title {
-    background-color: #70A070;
+    background-color: #4057F3;
 }
 
 /* Warnings only */
 div.warning {
     border: 1px solid #900000;
-    background-color: #ffe9e9;
+    background-color: #FFEDD5;
 }
 div.warning p.admonition-title {
-    background-color: #b04040;
+    background-color: #F34240;
 }
 
 
